<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.InicioFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_inicio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Naranja_1">

        <TextView
            android:id="@+id/tv_titulo_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/titulo_inicio"
            android:textAlignment="center"
            android:textColor="@color/Blanco"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_titulo_universidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/universidad"
            android:textColor="@color/Blanco"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo_inicio"/>

        <TextView
            android:id="@+id/tv_uni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nombre_uni"
            android:textAlignment="center"
            android:textColor="@color/Blanco"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo_universidad"/>

        <TextView
            android:id="@+id/tv_titulo_docente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/docente"
            android:textColor="@color/Blanco"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_uni"/>

        <TextView
            android:id="@+id/tv_docente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nombre_docente"
            android:textAlignment="center"
            android:textColor="@color/Blanco"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo_docente"/>

        <TextView
            android:id="@+id/tv_titulo_integrantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/integrantes"
            android:textColor="@color/Blanco"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_docente"/>

        <TextView
            android:id="@+id/tv_integrante1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nombre_integrante1"
            android:textAlignment="center"
            android:textColor="@color/Blanco"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo_integrantes"/>

        <TextView
            android:id="@+id/tv_integrante2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nombre_integrante2"
            android:textAlignment="center"
            android:textColor="@color/Blanco"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_integrante1"/>

        <TextView
            android:id="@+id/tv_integrante3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:text="@string/nombre_integrante3"
            android:textAlignment="center"
            android:textColor="@color/Blanco"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_integrante2"/>

        <TextView
            android:id="@+id/tv_semestre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/semestre"
            android:textColor="@color/Blanco"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_integrante3"/>

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/version"
            android:textColor="@color/Blanco"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_semestre"/>

        <TextView
            android:id="@+id/tv_fechaP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:text="@string/fechaPublicacion"
            android:textColor="@color/Blanco"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tv_version"
            app:layout_constraintTop_toBottomOf="@+id/tv_semestre"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>